// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Nav /> should render Nav 1`] = `
.c1 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  padding-right: 1.5rem;
  padding-left: 1.5rem;
  margin-right: auto;
  margin-left: auto;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  max-width: 100%;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  min-height: 7rem;
  font-size: 1.4rem;
  padding: 1rem 0;
  z-index: 400;
  background-color: #fff;
  color: rgba(0,0,0,.64);
  box-shadow: 0 .4rem 1.8rem 0 rgba(0,0,0,0.12),0 .7rem 1rem -.5rem rgba(0,0,0,0.15);
}

.c0 .sc-bZQynM {
  display: none;
}

@media (max-width:1000px) {
  .c0 .sc-ifAKCX {
    display: none;
  }

  .c0 .sc-EHOje {
    display: none;
  }

  .c0 .sc-bZQynM {
    display: block;
  }
}

<nav
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      Left Element
    </div>
  </div>
</nav>
`;

exports[`<Nav /> should render Nav with background color 1`] = `
.c1 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  padding-right: 1.5rem;
  padding-left: 1.5rem;
  margin-right: auto;
  margin-left: auto;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  max-width: 100%;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  min-height: 7rem;
  font-size: 1.4rem;
  padding: 1rem 0;
  z-index: 400;
  background-color: #bababa;
  color: #fff;
  box-shadow: 0 .4rem 2rem 0 rgba(0,0,0,0.14),0 .7rem 1.2rem -.5rem rgba(186,186,186,0.46);
}

.c0 .sc-bZQynM {
  display: none;
}

@media (max-width:1000px) {
  .c0 .sc-ifAKCX {
    display: none;
  }

  .c0 .sc-EHOje {
    display: none;
  }

  .c0 .sc-bZQynM {
    display: block;
  }
}

<nav
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      Left Element
    </div>
  </div>
</nav>
`;

exports[`<Nav /> should render Nav with primary color 1`] = `
.c1 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  padding-right: 1.5rem;
  padding-left: 1.5rem;
  margin-right: auto;
  margin-left: auto;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  max-width: 100%;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  min-height: 7rem;
  font-size: 1.4rem;
  padding: 1rem 0;
  z-index: 400;
  background-color: #1c8ffb;
  color: #fff;
  box-shadow: 0 .4rem 2rem 0 rgba(0,0,0,0.14),0 .7rem 1.2rem -.5rem rgba(28,143,251,0.46);
}

.c0 .sc-bZQynM {
  display: none;
}

@media (max-width:1000px) {
  .c0 .sc-ifAKCX {
    display: none;
  }

  .c0 .sc-EHOje {
    display: none;
  }

  .c0 .sc-bZQynM {
    display: block;
  }
}

<nav
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      Left Element
    </div>
  </div>
</nav>
`;

exports[`<Nav /> should render Nav with secondary color 1`] = `
.c1 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  padding-right: 1.5rem;
  padding-left: 1.5rem;
  margin-right: auto;
  margin-left: auto;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  max-width: 100%;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  min-height: 7rem;
  font-size: 1.4rem;
  padding: 1rem 0;
  z-index: 400;
  background-color: #1b1c1d;
  color: #fff;
  box-shadow: 0 .4rem 2rem 0 rgba(0,0,0,0.14),0 .7rem 1.2rem -.5rem rgba(27,28,29,0.46);
}

.c0 .sc-bZQynM {
  display: none;
}

@media (max-width:1000px) {
  .c0 .sc-ifAKCX {
    display: none;
  }

  .c0 .sc-EHOje {
    display: none;
  }

  .c0 .sc-bZQynM {
    display: block;
  }
}

<nav
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      Left Element
    </div>
  </div>
</nav>
`;

exports[`<Nav /> should render Nav with transparent background 1`] = `
.c1 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  padding-right: 1.5rem;
  padding-left: 1.5rem;
  margin-right: auto;
  margin-left: auto;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  max-width: 100%;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  min-height: 7rem;
  font-size: 1.4rem;
  padding: 1rem 0;
  z-index: 400;
  background: transparent;
  color: rgba(0,0,0,.64);
}

.c0 .sc-bZQynM {
  display: none;
}

@media (max-width:1000px) {
  .c0 .sc-ifAKCX {
    display: none;
  }

  .c0 .sc-EHOje {
    display: none;
  }

  .c0 .sc-bZQynM {
    display: block;
  }
}

<nav
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      Left Element
    </div>
  </div>
</nav>
`;
